fixed height and overflow on description component

--- a/src/app/components/description/description.component.scss
+++ b/src/app/components/description/description.component.scss
@@ -1,5 +1,7 @@
 .description-html {
   width: 60dvw;
+  max-height: min(28rem, 64dvh);
+  overflow: hidden auto;
 }
 
 label {
@@ -18,6 +20,7 @@ label {
     
     position: absolute;
     z-index: 0;
+    pointer-events: none;
     top: -0.25rem;
     left: -0.25rem;
     
@@ -42,15 +45,23 @@ label {
   }
 
   & > .description-html {
+    position: absolute;
+    height: 100%;
     overflow: auto;
   }
   
   & > textarea {
+    pointer-events: none;
+    position: absolute;
     resize: none;
     border: none;
-    height: 0;
-    width: 0;
-    overflow: hidden;
+    height: 100%;
+    width: 100%;
+
+    opacity: 0;
+    padding: 1px;
+
+    overflow: auto;
 
     font-family: 'Roboto Condensed';
     font-size: 16px;
@@ -58,16 +69,13 @@ label {
 
   &:focus-within, &:has(textarea:placeholder-shown) {
     & > .description-html {
-      display: none;
+      opacity: 0;
+      pointer-events: none;
     }
 
     & > textarea {
-      height: 100%;
-      width: 100%;
-
-      padding: 1px;
-
-      overflow: auto;
+      pointer-events: all;
+      opacity: 1;
     }
   }
 
